samples/_failures_safe/1761322474_ced38e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_387526a2.c: In function ‘main’:
./samples/SAFE/__tmp_387526a2.c:202:25: error: missing terminating " character
  202 |         fprintf(stderr, "Empty input
      |                         ^~~~~~~~~~~~
./samples/SAFE/__tmp_387526a2.c:202:9: error: expected expression at end of input
  202 |         fprintf(stderr, "Empty input
      |         ^~~~~~~
./samples/SAFE/__tmp_387526a2.c:202:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_387526a2.c:202:9: error: expected declaration or statement at end of input
